[83793164] Assessment title overflow fix

--- a/app/assets/stylesheets/pages/assessments.sass
+++ b/app/assets/stylesheets/pages/assessments.sass
@@ -39,7 +39,7 @@
       *
         color: #fff
       .type
-        font-size: 0.8em
+        font-size: 0.74em
         font-family: $heading-font-family
       .status
         padding-top: .5em
